# pacman

./: pyproject.toml  requirements.txt
src/: common.py  main.py  map.py  player.py  spritesheet.py
src/sb_pacman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: testmap.py
