[build-system]
requires = ["pip>=22.3.1",
            "setuptools>=66.0.0",
            "wheel>=0.38.4",
            "pygame>=2.5.0"]

build-backend = "setuptools.build_meta"

[project]
name = "sb_pacman"
readme = "README.md"
version = "0.0.1"
authors = [
    { name = "Stephen Booth", email = "stephen.booth.za@gmail.com" },
]
description = "A pacman implementation with pygame"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
pacman = "main:main"
